# DashboardViewerByErfan

./: .gitattributes  .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py  schemas.py
backend/app/api/: auth.py  dashboards.py  deps.py  editor.py  routes.py  user.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  models.py  raw.py  session.py
backend/app/services/: authorization_service.py  filter_service.py
docs/: README.md  architecture.md  deployment.md  development_guide.md  troubleshooting.md
docs/api/: index.md
docs/backend/: api_endpoints.md  authentication.md  background_jobs.md  database.md  models.md  overview.md  services.md
docs/diagrams/: authentication_flow.md  backend_architecture.md  dependency_graph.md  frontend_architecture.md  request_flow.md  request_lifecycle.md  system_overview.md
docs/frontend/: api_integration.md  authentication.md  components.md  overview.md  pages.md  routing.md  state_management.md
docs/metadata/: dependency_inventory.md  project_inventory.md  technology_stack.md
docs/modules/: module_dashboard_viewer.md
docs/pitfalls/: api.md  architecture.md  authentication.md  backend.md  frontend.md  performance.md  troubleshooting_patterns.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  theme.ts
frontend/src/components/: BarChartCanvas.tsx  LineChartCanvas.tsx  PieChartCanvas.tsx  ProtectedRoute.tsx  ThemeToggle.tsx
frontend/src/core/: BarChartItem.ts  DashboardItem.ts  LineChartItem.ts  PieChartItem.ts  (+1 more)
(+6 files in other folders)
