[project]
name = "dashboardviewerbyerfan"
version = "0.1.0"
description = "an OBIEE clone"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.114.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.2",
    "oracledb>=2.2.1",
    "python-multipart>=0.0.9",
    "email-validator>=2.3.0",
    "gunicorn>=23.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
backend = "app.main:run"
